fix for alignment

--- a/src/styles/components/_image-library.scss
+++ b/src/styles/components/_image-library.scss
@@ -67,9 +67,16 @@
     left: 0;
     bottom: 0;
     right: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    text-align: center;
+  }
+
+  .image-align-center{
+    position: relative;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%,-50%);
+    -ms-transform: translate(-50%,-50%);
+    transform: translate(-50%,-50%);
   }
 
   .images-container{
